cddabasesrc: Remove copy of sha1 digest
Remove our copy of sha1 digest now that we depend on glib 2.16.
Fixes #536313

--- a/gst-plugins-base/gst-libs/gst/cdda/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/cdda/Makefile.am
@@ -1,9 +1,7 @@
 lib_LTLIBRARIES = libgstcdda-@GST_MAJORMINOR@.la
 
 libgstcdda_@GST_MAJORMINOR@_la_SOURCES = \
-	gstcddabasesrc.c \
-	sha1.c \
-	sha1.h
+	gstcddabasesrc.c
 
 libgstcdda_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/cdda
 libgstcdda_@GST_MAJORMINOR@include_HEADERS = \
