camerabin: preview image sending optimization
 * decouple image capturing from image post-processing and encoding
 * post image-captured message after image is captured
 * post preview-image message with snapshot of captured image

--- a/gst-plugins-bad/gst/camerabin/Makefile.am
+++ b/gst-plugins-bad/gst/camerabin/Makefile.am
@@ -18,6 +18,7 @@ libgstcamerabin_la_SOURCES = gstcamerabin.c             \
 			  camerabinimage.c           \
 			  camerabinvideo.c           \
 			  camerabingeneral.c         \
+			  camerabinpreview.c         \
 			  gstcamerabinphotography.c
 
 nodist_libgstcamerabin_la_SOURCES = $(built_sources)
@@ -36,4 +37,5 @@ noinst_HEADERS = gstcamerabin.h             \
 		 camerabinimage.h           \
 		 camerabinvideo.h           \
 		 camerabingeneral.h         \
+		 camerabinpreview.h         \
 		 gstcamerabinphotography.h 
