--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -1300,10 +1300,13 @@ AG_GST_CHECK_FEATURE(SOUNDTOUCH, [soundtouch plug-in], soundtouch, [
       [HAVE_SOUNDTOUCH=yes
         HAVE_SOUNDTOUCH_1_4=no
         SOUNDTOUCH_LIBS="$SOUNDTOUCH_LIBS -lBPM"], 
-      [PKG_CHECK_MODULES(SOUNDTOUCH, libSoundTouch,
-        HAVE_SOUNDTOUCH=yes
-        SOUNDTOUCH_LIBS="$SOUNDTOUCH_LIBS -lBPM", 
-        HAVE_SOUNDTOUCH=no)])])
+      [PKG_CHECK_MODULES(SOUNDTOUCH, libSoundTouch >= 1.4,
+        [HAVE_SOUNDTOUCH=yes],
+        [PKG_CHECK_MODULES(SOUNDTOUCH, libSoundTouch,
+          [HAVE_SOUNDTOUCH=yes
+            HAVE_SOUNDTOUCH_1_4=no
+            SOUNDTOUCH_LIBS="$SOUNDTOUCH_LIBS -lBPM"],
+          HAVE_SOUNDTOUCH=no)])])])
   AC_SUBST(SOUNDTOUCH_CFLAGS)
   AC_SUBST(SOUNDTOUCH_LIBS)
   if test "x$HAVE_CXX" != "xyes"; then
