shapewipe: Add a simple shapewipe transition filter & example application

--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -286,6 +286,7 @@ AG_GST_CHECK_PLUGIN(rtpmux)
 AG_GST_CHECK_PLUGIN(scaletempo)
 AG_GST_CHECK_PLUGIN(sdp)
 AG_GST_CHECK_PLUGIN(selector)
+AG_GST_CHECK_PLUGIN(shapewipe)
 AG_GST_CHECK_PLUGIN(siren)
 AG_GST_CHECK_PLUGIN(speed)
 AG_GST_CHECK_PLUGIN(subenc)
@@ -1599,6 +1600,7 @@ gst/rtpmux/Makefile
 gst/scaletempo/Makefile
 gst/sdp/Makefile
 gst/selector/Makefile
+gst/shapewipe/Makefile
 gst/siren/Makefile
 gst/speed/Makefile
 gst/subenc/Makefile
@@ -1633,6 +1635,7 @@ sys/winscreencap/Makefile
 tests/examples/Makefile
 tests/examples/directfb/Makefile
 tests/examples/mxf/Makefile
+tests/examples/shapewipe/Makefile
 tests/examples/scaletempo/Makefile
 tests/examples/switch/Makefile
 ext/amrwb/Makefile
