--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -266,6 +266,7 @@ AG_GST_CHECK_PLUGIN(dvdspu)
 AG_GST_CHECK_PLUGIN(festival)
 AG_GST_CHECK_PLUGIN(freeze)
 AG_GST_CHECK_PLUGIN(h264parse)
+AG_GST_CHECK_PLUGIN(hdvparse)
 AG_GST_CHECK_PLUGIN(id3tag)
 AG_GST_CHECK_PLUGIN(librfb)
 AG_GST_CHECK_PLUGIN(liveadder)
@@ -1581,6 +1582,7 @@ gst/dvdspu/Makefile
 gst/festival/Makefile
 gst/freeze/Makefile
 gst/h264parse/Makefile
+gst/hdvparse/Makefile
 gst/id3tag/Makefile
 gst/librfb/Makefile
 gst/mpegdemux/Makefile
