--- a/gst-plugins-bad/ext/dirac/Makefile.am
+++ b/gst-plugins-bad/ext/dirac/Makefile.am
@@ -4,7 +4,7 @@ libgstdirac_la_SOURCES = \
 	gstdirac.cc \
 	gstdiracenc.cc
 
-libgstdirac_la_CXXFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) $(DIRAC_CFLAGS)
+libgstdirac_la_CXXFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CXXFLAGS) $(DIRAC_CFLAGS)
 libgstdirac_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(DIRAC_LIBS) -lz $(LIBM)
 libgstdirac_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstdirac_la_LIBTOOLFLAGS = --tag=disable-static
