examples: add stepping example.
Add an example of using playbin2 and frame stepping to simulate variable rate
playback based on a sine wave.

--- a/gst-plugins-base/tests/examples/seek/Makefile.am
+++ b/gst-plugins-base/tests/examples/seek/Makefile.am
@@ -2,7 +2,7 @@ if HAVE_GTK_X11
 GTK_EXAMPLES=seek scrubby
 endif
 
-examples = $(GTK_EXAMPLES)
+examples = $(GTK_EXAMPLES) stepping
 
 noinst_PROGRAMS = $(examples)
 
