sunaudio: Support new flags for options and actions
Use new audio mixer flags added in Base 0.10.23 to expose flags and options
on the SunAudio devices.

Fixes: #583593
Patch By: Brian Cameron <brian.cameron@sun.com>
Patch By: Garrett D'Amore <garrett.damore@sun.com>

--- a/gst-plugins-good/sys/sunaudio/Makefile.am
+++ b/gst-plugins-good/sys/sunaudio/Makefile.am
@@ -5,6 +5,7 @@ libgstsunaudio_la_SOURCES = gstsunaudio.c \
                             gstsunaudiomixerctrl.c \
                             gstsunaudiomixer.c \
                             gstsunaudiomixertrack.c \
+                            gstsunaudiomixeroptions.c \
                             gstsunaudiosrc.c
 
 libgstsunaudio_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
@@ -20,5 +21,6 @@ noinst_HEADERS = gstsunaudiosink.h \
                  gstsunaudiomixer.h \
                  gstsunaudiomixerctrl.h \
                  gstsunaudiomixertrack.h \
+                 gstsunaudiomixeroptions.h \
                  gstsunaudiosrc.h
 
