--- a/gst-plugins-bad/gst/id3tag/Makefile.am
+++ b/gst-plugins-bad/gst/id3tag/Makefile.am
@@ -1,9 +1,9 @@
 plugin_LTLIBRARIES = libgstid3tag.la
 
 libgstid3tag_la_SOURCES = \
+	gstid3mux.c \
 	gsttagmux.c \
-    id3tag.c \
-    gstid3tag.c
+	id3tag.c
 
 libgstid3tag_la_CFLAGS = \
 	$(GST_PLUGINS_BASE_CFLAGS) \
@@ -16,4 +16,4 @@ libgstid3tag_la_LIBADD = \
 libgstid3tag_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstid3tag_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = gstid3tag.h id3tag.h gsttagmux.h
+noinst_HEADERS = gstid3mux.h gsttagmux.h id3tag.h
