hdvparse: Link against libm because we use pow().

--- a/gst-plugins-bad/gst/hdvparse/Makefile.am
+++ b/gst-plugins-bad/gst/hdvparse/Makefile.am
@@ -7,7 +7,7 @@ noinst_HEADERS = \
 	gsthdvparse.h
 
 libgsthdvparse_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS)
-libgsthdvparse_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS)
+libgsthdvparse_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) $(LIBM)
 libgsthdvparse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgsthdvparse_la_LIBTOOLFLAGS = --tag=disable-static
 
