--- a/gstreamer/tests/examples/Makefile.am
+++ b/gstreamer/tests/examples/Makefile.am
@@ -17,12 +17,18 @@ else
   ADAPTER_TEST_DIR =
 endif
 
+# streams test needs pthreads
+if HAVE_PTHREAD_H
+  STREAMS_TEST_DIR = streams
+else
+  STREAMS_TEST_DIR =
+endif
+
 always_dirs = \
 	controller \
 	helloworld \
 	manual     \
 	metadata   \
-	streams    \
 	queue      \
 	stepping
 
@@ -45,7 +51,8 @@ always_dirs = \
 SUBDIRS = 				\
 	$(always_dirs)			\
 	$(ADAPTER_TEST_DIR)		\
+	$(STREAMS_TEST_DIR)		\
 	$(GST_PARSE_DIRS)		\
 	$(GST_LOADSAVE_DIRS)
 
-DIST_SUBDIRS = $(always_dirs) adapter xml typefind launch
+DIST_SUBDIRS = $(always_dirs) adapter streams xml typefind launch
