--- a/gstreamer/docs/manual/Makefile.am
+++ b/gstreamer/docs/manual/Makefile.am
@@ -5,7 +5,7 @@ MAKEFLAGS = -j1
 
 # base name of doc
 DOC = manual
-# formats defined for upload.mak
+# formats defined for upload-doc.mak
 FORMATS=html ps pdf
 
 # main xml file
@@ -27,7 +27,7 @@ EXTRA_SRC =
 # get the generic docbuilding Makefile stuff
 include $(srcdir)/../manuals.mak
 # get the generic upload target
-include $(top_srcdir)/common/upload.mak
+include $(top_srcdir)/common/upload-doc.mak
 
 ### this is standard automake stuff
 
