docs: Update common. Use upload-doc.mak instead of upload.mak

--- a/gst-plugins-base/docs/libs/Makefile.am
+++ b/gst-plugins-base/docs/libs/Makefile.am
@@ -7,11 +7,11 @@ DOCS_ARE_INCOMPLETE_PLEASE_FIXME=yespleasedo
 #DOC_MODULE=gst-plugins-libs-@GST_MAJORMINOR@
 DOC_MODULE=gst-plugins-base-libs
 
-# for upload.mak
+# for upload-doc.mak
 DOC=gst-plugins-base-libs
 FORMATS=html
 html: html-build.stamp
-include $(top_srcdir)/common/upload.mak
+include $(top_srcdir)/common/upload-doc.mak
 
 # generated basefiles
 #basefiles = \
