--- a/gst-plugins-bad/tests/check/Makefile.am
+++ b/gst-plugins-bad/tests/check/Makefile.am
@@ -95,10 +95,13 @@ noinst_HEADERS = elements/mxfdemux.h elements/amrparse_data.h elements/aacparse_
 
 TESTS = $(check_PROGRAMS)
 
-AM_CFLAGS = $(GST_OBJ_CFLAGS) $(GST_CHECK_CFLAGS) $(CHECK_CFLAGS)  $(GST_OPTION_CFLAGS)
+AM_CFLAGS = $(GST_OBJ_CFLAGS) $(GST_CHECK_CFLAGS) $(CHECK_CFLAGS) $(GST_OPTION_CFLAGS)
 LDADD = $(GST_OBJ_LIBS) $(GST_CHECK_LIBS) $(CHECK_LIBS)
 
-elements_camerabin_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CHECK_CFLAGS)
+elements_camerabin_CFLAGS = \
+        -I$(top_builddir)/gst-libs \
+        $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CHECK_CFLAGS) \
+        -DGST_USE_UNSTABLE_API
 elements_camerabin_LDADD = \
         $(top_builddir)/gst-libs/gst/interfaces/libgstphotography-@GST_MAJORMINOR@.la \
         $(GST_LIBS) $(GST_BASE_LIBS) $(GST_CHECK_LIBS) \
