freir0: Add support for frei0r mixer plugins

--- a/gst-plugins-bad/gst/frei0r/Makefile.am
+++ b/gst-plugins-bad/gst/frei0r/Makefile.am
@@ -3,7 +3,8 @@ plugin_LTLIBRARIES = libgstfrei0r.la
 libgstfrei0r_la_SOURCES = \
 	gstfrei0r.c \
 	gstfrei0rfilter.c \
-	gstfrei0rsrc.c
+	gstfrei0rsrc.c \
+	gstfrei0rmixer.c
 
 libgstfrei0r_la_CFLAGS = $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
 libgstfrei0r_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) \
@@ -11,4 +12,4 @@ libgstfrei0r_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) \
 libgstfrei0r_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstfrei0r_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = gstfrei0r.h gstfrei0rfilter.h gstfrei0rsrc.h frei0r.h
+noinst_HEADERS = gstfrei0r.h gstfrei0rfilter.h gstfrei0rsrc.h gstfrei0rmixer.h frei0r.h
