--- a/gst-plugins-good/gst/effectv/Makefile.am
+++ b/gst-plugins-good/gst/effectv/Makefile.am
@@ -5,11 +5,13 @@ libgsteffectv_la_SOURCES = \
 	gstshagadelic.c gstvertigo.c gstrev.c gstquark.c
 libgsteffectv_la_CFLAGS = \
 	$(GST_PLUGINS_BASE_CFLAGS) \
+	$(GST_CONTROLLER_CFLAGS) \
 	$(GST_BASE_CFLAGS) \
 	$(GST_CFLAGS) \
 	-I$(top_srcdir)/gst/videofilter
 libgsteffectv_la_LIBADD = \
 	$(GST_PLUGINS_BASE_LIBS) -lgstvideo-@GST_MAJORMINOR@ \
+	$(GST_CONTROLLER_LIBS) \
 	$(GST_BASE_LIBS) \
 	$(GST_LIBS) \
 	$(LIBM)
