effectv: Move type definitions into separate headers
This is needed for the docs later.

--- a/gst-plugins-good/gst/effectv/Makefile.am
+++ b/gst-plugins-good/gst/effectv/Makefile.am
@@ -18,4 +18,5 @@ libgsteffectv_la_LIBADD = \
 libgsteffectv_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgsteffectv_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = gsteffectv.h
+noinst_HEADERS = gsteffectv.h gstaging.h gstdice.h gstedge.h \
+        gstquark.h gstrev.h gstshagadelic.h gstvertigo.h gstwarp.h
