apedemux: add container-format tag
Use pbutils here because the string is translated.

--- a/gst-plugins-good/gst/apetag/Makefile.am
+++ b/gst-plugins-good/gst/apetag/Makefile.am
@@ -8,6 +8,7 @@ libgstapetag_la_CFLAGS = \
 	$(GST_CFLAGS)
 libgstapetag_la_LIBADD = \
 	$(GST_PLUGINS_BASE_LIBS) -lgsttag-@GST_MAJORMINOR@ \
+	-lgstpbutils-@GST_MAJORMINOR@\
 	$(GST_BASE_LIBS) \
 	$(GST_LIBS)
 libgstapetag_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
