--- a/gst-plugins-bad/ext/ladspa/Makefile.am
+++ b/gst-plugins-bad/ext/ladspa/Makefile.am
@@ -1,8 +1,14 @@
 plugin_LTLIBRARIES = libgstladspa.la
 
 libgstladspa_la_SOURCES = gstladspa.c
-libgstladspa_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CONTROLLER_CFLAGS) $(GST_CFLAGS) $(LRDF_CFLAGS)
-libgstladspa_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) -lgstaudio-$(GST_MAJORMINOR) $(LIBM) $(LRDF_LIBS) ../../gst-libs/gst/signalprocessor/libgstsignalprocessor.la
+libgstladspa_la_CFLAGS = \
+	-I$(top_builddir)/gst-libs \
+	$(GST_PLUGINS_BASE_CFLAGS) \
+	$(GST_CONTROLLER_CFLAGS) $(GST_CFLAGS) $(LRDF_CFLAGS)
+libgstladspa_la_LIBADD = \
+	$(top_builddir)/gst-libs/gst/signalprocessor/libgstsignalprocessor.la \
+	$(GST_PLUGINS_BASE_LIBS) -lgstaudio-$(GST_MAJORMINOR) \
+	$(LIBM) $(LRDF_LIBS)
 libgstladspa_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstladspa_la_LIBTOOLFLAGS = --tag=disable-static
 
