freeze: don't build plugin static lib
Pass --tag=disable-static to libtool like we do for other plugins.
Fixes #587023.

--- a/gst-plugins-bad/gst/freeze/Makefile.am
+++ b/gst-plugins-bad/gst/freeze/Makefile.am
@@ -4,6 +4,7 @@ libgstfreeze_la_SOURCES	= gstfreeze.c
 libgstfreeze_la_CFLAGS	= $(GST_CFLAGS)
 libgstfreeze_la_LIBADD	= ${GST_LIBS}
 libgstfreeze_la_LDFLAGS	= $(GST_PLUGIN_LDFLAGS)
+libgstfreeze_la_LIBTOOLFLAGS = --tag=disable-static
 
 noinst_HEADERS		= gstfreeze.h
 
