--- a/gst-plugins-base/gst-libs/gst/video/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/video/Makefile.am
@@ -13,22 +13,12 @@ lib_LTLIBRARIES = libgstvideo-@GST_MAJORMINOR@.la
 CLEANFILES = $(BUILT_SOURCES)
 
 libgstvideo_@GST_MAJORMINOR@_la_SOURCES = \
-	video.c gstvideosink.c gstvideofilter.c \
-	gstbasevideoutils.c \
-	gstbasevideocodec.c \
-	gstbasevideodecoder.c \
-	gstbasevideoencoder.c \
-	gstbasevideoparse.c
+	video.c gstvideosink.c gstvideofilter.c
 nodist_libgstvideo_@GST_MAJORMINOR@_la_SOURCES = $(BUILT_SOURCES)
 
 libgstvideo_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/video
 libgstvideo_@GST_MAJORMINOR@include_HEADERS = \
-	video.h gstvideosink.h gstvideofilter.h \
-	gstbasevideoutils.h \
-	gstbasevideocodec.h \
-	gstbasevideodecoder.h \
-	gstbasevideoencoder.h \
-	gstbasevideoparse.h
+	video.h gstvideosink.h gstvideofilter.h
 nodist_libgstvideo_@GST_MAJORMINOR@include_HEADERS = $(built_headers)
 
 libgstvideo_@GST_MAJORMINOR@_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
