--- a/gst-plugins-bad/gst-libs/gst/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = interfaces signalprocessor
+SUBDIRS = interfaces signalprocessor video
 
 noinst_HEADERS = gst-i18n-plugin.h gettext.h
-DIST_SUBDIRS = dshow interfaces signalprocessor
+DIST_SUBDIRS = dshow interfaces signalprocessor video
