v4l2src: optional support for device probing with gudev
Enumerate v4l2 devices using gudev if available.

Fixes bug #583640.

--- a/gst-plugins-good/sys/v4l2/Makefile.am
+++ b/gst-plugins-good/sys/v4l2/Makefile.am
@@ -23,7 +23,8 @@ libgstvideo4linux2_la_CFLAGS =   $(GST_PLUGINS_BASE_CFLAGS) \
 				 $(GST_BASE_CFLAGS) \
 				 $(GST_CFLAGS) \
 				 $(X_CFLAGS) \
-				 $(LIBV4L2_CFLAGS)
+				 $(LIBV4L2_CFLAGS) \
+				 $(GUDEV_CFLAGS)
 
 libgstvideo4linux2_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstvideo4linux2_la_LIBTOOLFLAGS = --tag=disable-static
@@ -33,7 +34,8 @@ libgstvideo4linux2_la_LIBADD =   $(GST_PLUGINS_BASE_LIBS) \
 				 -lgstinterfaces-$(GST_MAJORMINOR) \
 				 $(GST_LIBS) \
 				 $(xv_libs) \
-				 $(LIBV4L2_LIBS)
+				 $(LIBV4L2_LIBS) \
+				 $(GUDEV_LIBS)
 
 noinst_HEADERS = gstv4l2object.h v4l2_calls.h \
 		 gstv4l2src.h v4l2src_calls.h \
