--- a/gst-plugins-good/tests/examples/Makefile.am
+++ b/gst-plugins-good/tests/examples/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = audiofx equalizer level rtp spectrum
+SUBDIRS = audiofx equalizer level rtp spectrum v4l2
 
-DIST_SUBDIRS = audiofx equalizer level rtp spectrum
+DIST_SUBDIRS = audiofx equalizer level rtp spectrum v4l2
