--- a/gst-plugins-bad/ext/schroedinger/Makefile.am
+++ b/gst-plugins-bad/ext/schroedinger/Makefile.am
@@ -14,6 +14,7 @@ libgstschro_la_CFLAGS = \
 	$(GST_CFLAGS) \
         $(GST_BASE_CFLAGS) \
 	$(GST_PLUGINS_BASE_CFLAGS) \
+	-DGST_USE_UNSTABLE_API \
 	$(SCHRO_CFLAGS)
 libgstschro_la_LIBADD = \
 	$(GST_LIBS) \
