OPERA_MINIMAL_GST

--- a/glib/config.h.win32.in
+++ b/glib/config.h.win32.in
@@ -23,7 +23,7 @@
 /* #undef ENABLE_GC_FRIENDLY_DEFAULT */
 
 /* always defined to indicate that i18n is enabled */
-#define ENABLE_NLS 1
+/* #define ENABLE_NLS 1 */
 
 /* Define the gettext package to be used */
 #define GETTEXT_PACKAGE "@GETTEXT_PACKAGE@"
