basevideo: Link with libgstvideo for some used functions

--- a/gst-plugins-bad/gst-libs/gst/video/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/video/Makefile.am
@@ -19,6 +19,6 @@ libgstbasevideo_@GST_MAJORMINOR@include_HEADERS = \
 	gstbasevideoparse.h
 
 libgstbasevideo_@GST_MAJORMINOR@_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS) -DGST_USE_UNSTABLE_API
-libgstbasevideo_@GST_MAJORMINOR@_la_LIBADD = $(GST_BASE_LIBS) $(GST_LIBS)
+libgstbasevideo_@GST_MAJORMINOR@_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(GST_BASE_LIBS) $(GST_LIBS) -lgstvideo-@GST_MAJORMINOR@
 libgstbasevideo_@GST_MAJORMINOR@_la_LDFLAGS = $(GST_LIB_LDFLAGS) $(GST_ALL_LDFLAGS) $(GST_LT_LDFLAGS)
 
