gio: Add example application that shows how to handle the "not-mounted" message

--- a/gst-plugins-base/configure.ac
+++ b/gst-plugins-base/configure.ac
@@ -797,6 +797,7 @@ tests/examples/dynamic/Makefile
 tests/examples/seek/Makefile
 tests/examples/volume/Makefile
 tests/examples/snapshot/Makefile
+tests/examples/gio/Makefile
 tests/icles/Makefile
 docs/Makefile
 docs/design/Makefile
