--- a/gst-plugins-base/tests/examples/v4l/Makefile.am
+++ b/gst-plugins-base/tests/examples/v4l/Makefile.am
@@ -1,6 +1,9 @@
 noinst_PROGRAMS = probe
 
 probe_SOURCES = probe.c
-probe_CFLAGS  = $(GST_BASE_CFLAGS) $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
-probe_LDFLAGS = $(GST_BASE_LIBS) $(GST_LIBS) $(GST_PLUGINS_BASE_LIBS) -lgstinterfaces-0.10
+probe_CFLAGS  = $(GST_PLUGINS_BASE_CFLAGS) \
+		$(GST_BASE_CFLAGS) $(GST_CFLAGS)
+probe_LDFLAGS = $(GST_PLUGINS_BASE_LIBS) \
+		$(GST_BASE_LIBS) $(GST_LIBS) \
+		$(top_builddir)/gst-libs/gst/interfaces/libgstinterfaces-@GST_MAJORMINOR@.la
 
